--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "extra": {
         "laravel": {
             "dont-discover": [
+"laravel/dusk"
             ]
         }
     },
@@ -55,6 +56,7 @@
         "sort-packages": true,
         "optimize-autoloader": true
     },
+
     "minimum-stability": "dev",
     "prefer-stable": true
 }
