--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "askedio/laravel-soft-cascade": "^5.7",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
+        "laravel/socialite": "^4.0",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
